// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index - snapshot renders correctly when delete is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div
    className={undefined}
  >
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-35 MuiIconButton-root-29 MuiSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-34"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-38"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            autoFocus={undefined}
            checked={false}
            className="MuiSwitchBase-input-28"
            disabled={false}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            readOnly={undefined}
            required={undefined}
            tabIndex={undefined}
            type="radio"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-45"
        />
      </span>
    </div>
    <div
      className={undefined}
    >
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52"
      >
        <label
          className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-53"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
      <div
        className="Component-feedbackContainer-55"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-38 Component-arrowIcon-56"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
            />
          </g>
        </svg>
        <div
          className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52 Component-text-54"
        >
          <label
            className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-53"
          >
            <div>
              EditableHtml
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-35 MuiIconButton-root-29"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-34"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-38 MuiSvgIcon-colorPrimary-39"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                  />
                </g>
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-45"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly when feedback is not allowed 1`] = `
<div
  className="choiceConfiguration"
>
  <div
    className={undefined}
  >
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-35 MuiIconButton-root-29 MuiSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-34"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-38"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            autoFocus={undefined}
            checked={false}
            className="MuiSwitchBase-input-28"
            disabled={false}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            readOnly={undefined}
            required={undefined}
            tabIndex={undefined}
            type="radio"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-45"
        />
      </span>
    </div>
    <div
      className={undefined}
    >
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52"
      >
        <label
          className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-53"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
      <div
        className="Component-feedbackContainer-55"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-38 Component-arrowIcon-56"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
            />
          </g>
        </svg>
        <div
          className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52 Component-text-54"
        >
          <label
            className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-53"
          >
            <div>
              EditableHtml
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-35 MuiIconButton-root-29"
        disabled={false}
        onBlur={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-34"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-38"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-45"
        />
      </button>
    </div>
  </div>
</div>
`;

exports[`index - snapshot renders correctly with default props 1`] = `
<div
  className="choiceConfiguration"
>
  <div
    className={undefined}
  >
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Correct
      </label>
      <span
        aria-label="Correct"
        className="MuiButtonBase-root-35 MuiIconButton-root-29 MuiSwitchBase-root-25 MuiRadio-root-20 MuiRadio-colorSecondary-24 RawInputRadio-radioRoot-1"
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role={undefined}
        tabIndex={null}
      >
        <span
          className="MuiIconButton-label-34"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-38"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
            />
          </svg>
          <input
            autoFocus={undefined}
            checked={false}
            className="MuiSwitchBase-input-28"
            disabled={false}
            id={undefined}
            name={undefined}
            onChange={[Function]}
            readOnly={undefined}
            required={undefined}
            tabIndex={undefined}
            type="radio"
            value={undefined}
          />
        </span>
        <span
          className="MuiTouchRipple-root-45"
        />
      </span>
    </div>
    <div
      className={undefined}
    >
      <div
        className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52"
      >
        <label
          className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
          data-shrink={true}
        >
          Label
        </label>
        <div
          className="Component-editorHolder-53"
        >
          <div>
            EditableHtml
          </div>
        </div>
      </div>
      <div
        className="Component-feedbackContainer-55"
      >
        <svg
          aria-hidden="true"
          className="MuiSvgIcon-root-38 Component-arrowIcon-56"
          color={undefined}
          focusable="false"
          viewBox="0 0 24 24"
        >
          <g>
            <path
              d="M19 15l-6 6-1.42-1.42L15.17 16H4V4h2v10h9.17l-3.59-3.58L13 9l6 6z"
            />
          </g>
        </svg>
        <div
          className="MuiFormControl-root-4 RawInputContainer-formControl-2 Component-labelContainer-52 Component-text-54"
        >
          <label
            className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
            data-shrink={true}
          >
            Feedback Text
          </label>
          <div
            className="Component-editorHolder-53"
          >
            <div>
              EditableHtml
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Feedback
      </label>
      <div>
        <div
          onClick={[Function]}
        >
          <button
            aria-label="Custom Feedback"
            className="MuiButtonBase-root-35 MuiIconButton-root-29"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            tabIndex="0"
            type="button"
          >
            <span
              className="MuiIconButton-label-34"
            >
              <svg
                aria-hidden="true"
                className="MuiSvgIcon-root-38 MuiSvgIcon-colorPrimary-39"
                color={undefined}
                focusable="false"
                viewBox="0 0 24 24"
              >
                <g>
                  <path
                    d="M20 2H4c-1.1 0-1.99.9-1.99 2L2 22l4-4h14c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2zm-7 12h-2v-2h2v2zm0-4h-2V6h2v4z"
                  />
                </g>
              </svg>
            </span>
            <span
              className="MuiTouchRipple-root-45"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      className="MuiFormControl-root-4 RawInputContainer-formControl-2"
    >
      <label
        className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11 RawInputContainer-label-3"
        data-shrink={true}
      >
        Delete
      </label>
      <button
        aria-label="delete"
        className="MuiButtonBase-root-35 MuiIconButton-root-29"
        disabled={false}
        onBlur={[Function]}
        onClick={undefined}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiIconButton-label-34"
        >
          <svg
            aria-hidden="true"
            className="MuiSvgIcon-root-38"
            color={undefined}
            focusable="false"
            viewBox="0 0 24 24"
          >
            <g>
              <path
                d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
              />
            </g>
          </svg>
        </span>
        <span
          className="MuiTouchRipple-root-45"
        />
      </button>
    </div>
  </div>
</div>
`;
